<resources>
    <string name="app_name">Shop Here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shop_name_text">ShopHere</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="stay_signin_text">stay signed in</string>
    <string name="title_activity_main_store">MainStore</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_account_text">Create account</string>
    <string name="show_password_text">Show password</string>
    <string name="or_text">--------------------     Or     --------------------</string>
    <string name="sign_in_now_text">Sign-In Now</string>
    <string name="create_your_shophere_account_text">Create your ShopHere account</string>
    <string name="logout_text">LOGOUT</string>
    <string name="title_activity_menu">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="your_order">Your Order</string>
    <string name="purchase_history">Purchase History</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="all_categories">All Categories</string>
    <string name="art_craft"><![CDATA[Art & Craft]]></string>
    <string name="books">Books</string>
    <string name="computer">Computer</string>
    <string name="fashion">Fashion</string>
    <string name="health_household"><![CDATA[Health & Household]]></string>
    <string name="home_kitchen"><![CDATA[Home & Kitchen]]></string>
    <string name="movie_television"><![CDATA[Movie & Television]]></string>
    <string name="pet_supplies">Pet Supplies</string>
    <string name="software">Software</string>
    <string name="video_games">Video Games</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="camera_text">Camera</string>
    <string name="mic_text">Mic</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="mic">Mic</string>
    <string name="mainstore_title">Video Game Accessories</string>
    <string name="shop_now_text">Shop Now</string>
    <string name="instock_text">In Stock</string>
    <string name="outstock_text">Out of Stock</string>
    <string name="quantity_text">Quantity : </string>
    <string name="about_us_text">About US</string>
    <string name="description_text">Description</string>
    <string name="features_detail_text"><![CDATA[Features & Detail]]></string>
    <string name="product_details_text">Product Details</string>
    <string name="enter_payment_details">Enter Payment Details</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_your_credit_card_information">Enter your credit card information</string>
    <string name="scan_your_card">Scan your card</string>
    <string name="run">run</string>
    <string name="or2">------------------------------------------- or ------------------------------------------</string>
    <string name="buy_now_text">Buy Now</string>
    <string name="add_to_cart_text">Add to Cart</string>
    <string name="subtotal_text">Subtotal </string>
    <string name="no_item_in_you_cart">No Item In you cart</string>
    <string name="delete_text">Delete</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="con">CONTINUE</string>
    <string name="pay_by_bank_transfer">Pay by bank transfer</string>
    <string name="thank_text">Thank you ! Your order is complete.</string>
    <string name="close_message_text">Close Message</string>
</resources>