<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductOverview">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productOverviewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/productOverviewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="16dp"/>

            <ImageView
                android:id="@+id/productOverviewImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:paddingHorizontal="16dp"/>

            <TextView
                android:id="@+id/productOverviewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Price"
                android:textStyle="bold"
                android:paddingHorizontal="16dp"/>

            <TextView
                android:id="@+id/quanlityStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/id_gotStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/instock_text"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/haveShow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_quantity_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="@string/quantity_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/haveShow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <Button
                    android:id="@+id/addChart"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="Add to Chart" />

                <Button
                    android:id="@+id/buynow"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="Buy Now" />

            </LinearLayout>

            <TextView
                android:id="@+id/Text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="80dp"
                android:text="@string/about_us_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_aboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/Text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/Text_featuresNDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features_detail_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_featuresndetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/Text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_details_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>